page heading font

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -20,7 +20,7 @@
     "playVideo": "Play Video"
   },
   "about": {
-    "title": "SIGNATURE BITES, UNFORGETTABLE NIGHTS",
+    "title": "Signature Bites, Unforgettable Nights",
     "italic": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
     "bullets": {
       "1": "Ullamco laboris nisi ut aliquip ex ea commodo consequat.",
