--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -42,7 +42,7 @@
         "desc": "We cook fresh for every order with strict hygiene standards, we use quality products and consistent quality—so your guests enjoy every bite."
       },
       "3": {
-        "title": "Professional Expertise",
+        "title": "Professional Corporate Expertise",
         "desc": "Expertly managed catering solutions designed specifically for corporate events, ensuring smooth execution and a polished dining experience."
       }
     }
